--- a/generators/templates/test.tsx.hbs
+++ b/generators/templates/test.tsx.hbs
@@ -4,11 +4,7 @@ import { renderWithTheme } from 'utils/tests/helpers'
 import {{pascalCase name}} from '.'
 
 describe('<{{pascalCase name}} />', () => {
-  it('should render the {{pascalCase name}}', () => {
+  it('should render the {{name}}', () => {
     renderWithTheme(<{{pascalCase name}} />)
-
-
-
-
   })
 })
